--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
         <link rel="stylesheet" href="style.css">
     </head>
 <body>
-    Привет от нетодологии    
+    <a href="https://netology.ru/">Привет от нетодологии</a>      
 </body>
 </html>
